adequations in all the pages

--- a/howtohelp.html
+++ b/howtohelp.html
@@ -27,77 +27,78 @@
         </nav>
     </header>
 
+    <main>
+        <section class="howtohelp-section">
+            <div class="howtohelp">
+                <div class="image-howto">
+                    <img src="assets/image/howtohelp1.jpg" alt="love is love image">
+                </div>
+                <div class="text-howto">
+                    <h2> how to help?</h2>
+                    <br>
+                    <p> you can help our NGO in several meaningful ways. Your contribution is essential for us to
+                        continue providing vital support to the LGBTQAPN+ community.</p>
+                    <br>
+                    <p> one way to contribute is through financial donations. you can make a donation directly to our
+                        IBAN: IE29AIBK93115212345678. these donations enable us to expand our services and
+                        reach more people in need, ensuring that each individual receives the support they deserve.
+                    </p>
+                    <br>
+                    <p>in addition to financial donations, you can also make a difference by dedicating your time and
+                        skills as a volunteer. we need volunteers to assist in various areas, such as:</p>
+                    <br>
+                    <p>theater and painting classes: help inspire and develop the creativity of
+                        our participants, providing them with a form of personal expression and strengthening their
+                        self-esteem.</p>
+                    <p>maintenance of building spaces: collaborate in maintaining and improving
+                        our spaces, ensuring a safe and welcoming environment for everyone.</p>
+                    <p>welcoming new people: be a friendly and welcoming presence for those who
+                        come seeking help, helping them feel valued and welcome.</p>
+                    <p>listening to those in need: offer a friendly ear and attentive listening to
+                        those who need to vent and share their experiences.</p>
+                    <br>
+                    <p>your support, whether through financial donations or volunteer work, is essential for us to
+                        continue our mission of inclusion and support for the LGBTQAPN+ community. together, we can
+                        build a more
+                        just
+                        and welcoming future for everyone.</p>
+                    <br>
+                </div>
+            </div>
+        </section>
 
-    <section class="howtohelp-section">
-    <div class="howtohelp">
-        <div class="image-howto">
-            <img src="assets/image/howtohelp1.jpg" alt="love is love image">
-        </div>
-        <div class="text-howto">
-            <h1> how to help?</h1>
-            <br>
-            <p> you can help our NGO in several meaningful ways. Your contribution is essential for us to
-                continue providing vital support to the LGBTQAPN+ community.</p>
-            <br>
-            <p> one way to contribute is through financial donations. you can make a donation directly to our
-               IBAN: IE29AIBK93115212345678. these donations enable us to expand our services and
-                reach more people in need, ensuring that each individual receives the support they deserve.
-            </p>
-            <br>
-            <p>in addition to financial donations, you can also make a difference by dedicating your time and
-                skills as a volunteer. we need volunteers to assist in various areas, such as:</p>
-            <br>
-            <p>theater and painting classes: help inspire and develop the creativity of
-                our participants, providing them with a form of personal expression and strengthening their
-                self-esteem.</p>
-            <p>maintenance of building spaces: collaborate in maintaining and improving
-                our spaces, ensuring a safe and welcoming environment for everyone.</p>
-            <p>welcoming new people: be a friendly and welcoming presence for those who
-                come seeking help, helping them feel valued and welcome.</p>
-            <p>listening to those in need: offer a friendly ear and attentive listening to
-                those who need to vent and share their experiences.</p>
-            <br>
-            <p>your support, whether through financial donations or volunteer work, is essential for us to
-                continue our mission of inclusion and support for the LGBTQAPN+ community. together, we can build a more
-                just
-                and welcoming future for everyone.</p>
-            <br>
-        </div>
-    </div>
-    </section>
-
-    <section class="depoiment-section">
-        <div class="depoiment">
-            <div class="image-depoiment">
-                <img src="assets/image/teenage man11.jpg" alt="boy image">
+        <section class="depoiment-section">
+            <div class="depoiment">
+                <div class="image-depoiment">
+                    <img src="assets/image/teenage-man11.jpg" alt="boy image">
+                </div>
+                <div class="text-depoiment">
+                    <h2>Carl Moore</h2>
+                    <p>finding help at the ngo was essential for me. i felt welcomed and respected. the team offered me
+                        emotional and social support that changed my life for the better. </p>
+                </div>
             </div>
-            <div class="text-depoiment">
-                <h1>Carl Moore</h1>
-                <p>finding help at the ngo was essential for me. i felt welcomed and respected. the team offered me
-                    emotional and social support that changed my life for the better. </p>
+            <div class="depoiment">
+                <div class="image-depoiment">
+                    <img src="assets/image/teenage-girl1.jpg" alt="girl image">
+                </div>
+                <div class="text-depoiment">
+                    <h2>Jenny Foley</h2>
+                    <p>at the ngo, i found a safe and welcoming space. i participated in artistic activities that helped
+                        me express my feelings and connect with other people.</p>
+                </div>
             </div>
-        </div>
-        <div class="depoiment">
-            <div class="image-depoiment">
-                <img src="assets/image/teenage girl1 (1).jpg" alt="girl image">
+            <div class="depoiment">
+                <div class="image-depoiment">
+                    <img src="assets/image/teenage-man21.jpg" alt="boy image">
+                </div>
+                <div class="text-depoiment">
+                    <h2>Jeff Egan</h2>
+                    <p>the ngo helped me overcome difficult moments. the psychological support sessions and group
+                        activities gave me strength and confidence to move forward..</p>
+                </div>
             </div>
-            <div class="text-depoiment">
-                <h1>Jenny Foley</h1>
-                <p>at the ngo, i found a safe and welcoming space. i participated in artistic activities that helped
-                    me express my feelings and connect with other people.</p>
-            </div>
-        </div>
-        <div class="depoiment">
-            <div class="image-depoiment">
-                <img src="assets/image/teenage man21 (1).jpg" alt="boy image">
-            </div>
-            <div class="text-depoiment">
-                <h1>Jeff Egan</h1>
-                <p>the ngo helped me overcome difficult moments. the psychological support sessions and group
-                    activities gave me strength and confidence to move forward..</p>
-            </div>
-        </div>
-    </section>
+        </section>
 
     </main>
 
