--- a/thank.html
+++ b/thank.html
@@ -7,15 +7,31 @@
     <meta name="description"
         content="Building 4 you. House in Dublin Ireland, where the community LGBTQAPN+ can find some help">
     <meta name="keywords" content="LGBT community, LGBTQAPN, help your community, stay safe, Ireland, Dublin">
-    <title>Building 4 you</title>
+    <title>building4u</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <section>
-    <h1>thank you for you message</h1>
-    <p>we will keep in touch.<i class="fa-regular fa-building"></i></p>
-    </section>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">building<i class="fa-solid fa-4"></i>u</h1>
+        </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-regular fa-building"></i></label>
+        <nav>
+            <ul id="menu">
+                <li><a href="aboutus.html" class="active">about us</a></li>
+                <li><a href="howtohelp.html">how to help</a></li>
+                <li><a href="contactus.html">contact us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>thank you for you message</h2>
+            <p>we will keep in touch.<i class="fa-regular fa-building"></i></p>
+        </section>
+    </main>
 
     <footer>
         <ul id="social-networks">
