--- a/contactus.html
+++ b/contactus.html
@@ -30,7 +30,7 @@
 
     <main>
         <section id="contact">
-            <h1>contact us</h1>
+            <h2>contact us</h2>
             <form action="thank.html" method="GET">
                 <label for="name">name:</label><br>
                 <input type="text" id="name" name="name" required><br>
@@ -50,7 +50,7 @@
                 <button type="submit">submit</button>
             </form>
             <br>
-            <h1>open times</h1>
+            <h2>open times</h2>
 
             <table>
                 <tr>
@@ -66,7 +66,7 @@
             </table>
             <br>
 
-            <h1>get in touch</h1>
+            <h2>get in touch</h2>
 
             <div>
                 <span>phone: </span>
@@ -79,16 +79,14 @@
             <br>
 
 
-            <h1>address</h1>
+            <h2>address</h2>
             <p>building4u,<br>24 inclusion street,<br>dublin,<br>ireland.</p>
         </section>
 
-
-        <section>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.656535670172!2d-6.261353884191905!3d53.34980928208086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e9b1a5a8e33%3A0x62363fa5e2a64e16!2sThe%20Spire%2C%20O'Connell%20Street%20Upper%2C%20North%20City%2C%20Dublin%201%2C%20Ireland!5e0!3m2!1sen!2sus!4v1622700242021!5m2!1sen!2sus"
-                width="100%" height="300"></iframe>
-        </section>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.656535670172!2d-6.261353884191905!3d53.34980928208086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e9b1a5a8e33%3A0x62363fa5e2a64e16!2sThe%20Spire%2C%20O'Connell%20Street%20Upper%2C%20North%20City%2C%20Dublin%201%2C%20Ireland!5e0!3m2!1sen!2sus!4v1622700242021!5m2!1sen!2sus"
+            height="300" style="border:0; width:100%;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade" title="virtual map of building4u"></iframe>
 
     </main>
 
