add multidevice image to readme page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Building 4 you. House in Dublin Ireland, where the community LGBTQAPN+ can find some help">
+        content="building4u. house in Dublin Ireland, where the community LGBTQAPN+ can find some help">
     <meta name="keywords" content="LGBT community, LGBTQAPN, help your community, stay safe, Ireland, Dublin">
     <title>building4u</title>
     <link rel="stylesheet" href="assets/css/style.css">
