add comments to the pages

--- a/howtohelp.html
+++ b/howtohelp.html
@@ -27,6 +27,8 @@
         </nav>
     </header>
 
+    <!--main content-->
+
     <main>
         <section class="howtohelp-section">
             <div class="howtohelp">
