--- a/aboutus.html
+++ b/aboutus.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
 
-
+    <!--main content-->
     <main>
         <section id="welcome">
             <div class="welcome">
