--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     </header>
-
+<!--main content--> 
     <main>
         <section id="hero">
             <div id="cover-text">
